--- a/DBLWD6/DBLWD6.API/appsettings.json
+++ b/DBLWD6/DBLWD6.API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "MicrosoftSQLServer": "Data Source=192.168.1.104,1433;Initial Catalog=DBLWD;Persist Security Info=True;User ID=Miruku;Password=pass1525;Trust Server Certificate=True"
+    "MicrosoftSQLServer": "Data Source=SUIKA;Initial Catalog=DBLWD6;Integrated Security=True;Trust Server Certificate=True"
   },
 
   "ItemsPerPageDefault": 5,
